--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   flutter_timezone: ^1.0.8
   rxdart: ^0.28.0
+  image_picker: ^1.1.2
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.11
+ 
 
  
  
@@ -56,8 +60,6 @@ dependencies:
 
 dev_dependencies:
   analyzer: ^5.13.0
-  build_runner: ^2.4.9
-  hive_generator: ^2.0.1
 
   flutter_test:
     sdk: flutter
